// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h1
  className="sc-bdVaJa ishfIf sinoui-typography sinoui-typography--h1"
  color="textPrimary"
  type="h1"
>
  H1
</h1>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdVaJa ishfIf sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h2>,
  <h1
    className="sc-bdVaJa dfhjEy sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa eljubQ sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa gDGWjO sinoui-typography sinoui-typography--h1"
    color="success"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa dYLtTV sinoui-typography sinoui-typography--h1 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h1
    className="sc-bdVaJa ishfIf sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa fVAnFT sinoui-typography sinoui-typography--h1"
    color="primary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa gJpHkg sinoui-typography sinoui-typography--h1"
    color="secondary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa ishfIf sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa bVNFkg sinoui-typography sinoui-typography--h1"
    color="textSecondary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa bUiGmQ sinoui-typography sinoui-typography--h1"
    color="error"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa kwcqYm sinoui-typography sinoui-typography--h1"
    color="warning"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa gDGWjO sinoui-typography sinoui-typography--h1"
    color="success"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-bdVaJa jMjqLS sinoui-typography sinoui-typography--h1"
    color="info"
    type="h1"
  >
    H1
  </h1>,
]
`;
